--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "express": "^4.17.1",
     "mongoose": "5.8.x",
     "mongoose-autopopulate": "^0.11.0",
-    "mongoose-unique-array": "git://git@github.com:apascualm/mongoose-unique-array.git#autopopulate-duplicate"
+    "mongoose-unique-array": "^0.3.4"
   }
 }
