--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressjs-authorization",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0",
   "description": "Authorization middleware based in permissions by modules, with possibility of group in roles.",
   "main": "./src/authorization.js",
   "scripts": {},
